2008-08-07  Martyn Russell  <martyn@imendio.com>

	* configure.ac: 
	* tests/libtracker-common/tracker-type-utils-test.c:
	* tests/tracker-indexer/Makefile.am:
	* tests/tracker-indexer/tracker-index-test.c: Removed dirty hacks
	for testing the index API and cleaned up the code a little.
	
	* src/libtracker-common/Makefile.am:
	* src/libtracker-common/tracker-index-item.[ch]:
	* src/libtracker-db/Makefile.am:
	* src/libtracker-db/tracker-db-index-item.[ch]:
	* src/libtracker-db/tracker-db-index.[ch]: 
	* src/tracker-indexer/tracker-indexer.c:
	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-query-tree.c: Renamed TrackerIndexItem to
	TrackerDBIndexItem and TrackerSearchHit to TrackerDBIndexItemRank.
	Also moved those both to libtracker-db from libtracker-common.

	* src/tracker-indexer/tracker-index.[ch]: Removed in favour of the
	libtracker-db version.
	
	* utils/qdbm/Makefile.am:
	* utils/qdbm/print-words.c:
	* utils/qdbm/search-word.c: Fixed tools.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-index-item.h: Added
	TrackerSearchHit typedef here from the TrackerQueryTreeModule. 

	* configure.ac:
	* src/libtracker-db/tracker-db-index-manager.[ch]:
	* src/libtracker-db/tracker-db-index.[ch]:
	* src/tracker-indexer/Makefile.am:
	* src/tracker-indexer/tracker-indexer.c: 
	* src/tracker-indexer/tracker-main.c:
	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-db.[ch]:
	* src/trackerd/tracker-dbus.[ch]:
	* src/trackerd/tracker-keywords.c:
	* src/trackerd/tracker-main.[ch]:
	* src/trackerd/tracker-metadata.[ch]:
	* src/trackerd/tracker-processor.c:
	* src/trackerd/tracker-query-tree.[ch]:
	* src/trackerd/tracker-search.[ch]:
	* src/trackerd/tracker-xesam.[ch]: Moved tracker-index.[ch] in the
	daemon and indexer into libtracker-db/tracker-db-index.[ch]
	combining the APIs and code.

	* tests/trackerd/tracker-index-test.c: 
	* tests/trackerd/Makefile.am: Disabled the index test, it is
	broken.

	* utils/qdbm/print-words.c: 